infra/modules/network/vpc.tf
resource "aws_vpc" "this" {
    cidr_block = var.cidr_block
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
        Name  = var.name
        Owner = var.owner
    }
}
